--- a/test/test.html
+++ b/test/test.html
@@ -6,6 +6,7 @@
     <title>Mocha Tests</title>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
     <script src="../node_modules/mocha/mocha.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=8;FF=3;OtherUA=4" />
 </head>
 <body>
     <div id="mocha"></div>
