--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=8;FF=3;OtherUA=4" />
+    <link rel="stylesheet" href="../dist/toaster.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <script src="../dist/Toaster.js"></script>
